Remove /// ref, change ts to dev dependenc

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "outDir": "lib/"
   },
   "files": [
+    "./typings/index.d.ts",
     "./src/index.ts",
     "./tests/dtos/techstacks.dtos.ts",
     "./tests/client.spec.ts"
