--- a/package.json
+++ b/package.json
@@ -34,13 +34,13 @@
   ],
   "licenses": [],
   "main": "lib/index.js",
-  "typings": "lib/index",
+  "typings": "lib/index.d.ts",
   "dependencies": {
     "es6-shim": ">=0.35.0",
-    "isomorphic-fetch": ">=2.2.0",
-    "typescript": "^1.8.10"
+    "isomorphic-fetch": ">=2.2.0"
   },
   "devDependencies": {
+    "typescript": "^1.8.10",
     "chai": "^3.5.0",
     "mocha": "^2.5.3"
   }
