Try fix jspm dep syntax for npm publish

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "servicestack-client",
   "title": "ServiceStack JavaScript Utils",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "ServiceStack's TypeScript library providing a number of convenience utilities in developing web apps. Integrates with ServiceStack's Server features including Error Handling, Validation and Server Events",
   "homepage": "https://github.com/ServiceStack/servicestack-client",
   "bugs": "https://github.com/ServiceStack/Issues",
@@ -47,13 +47,13 @@
   "jspm": {
     "directories": {},
     "dependencies": {
-      "es6-shim": "npm:es6-shim@>=0.35.0",
-      "isomorphic-fetch": "npm:isomorphic-fetch@>=2.2.0"
+      "es6-shim": ">=0.35.0",
+      "isomorphic-fetch": ">=2.2.0"
     },
     "devDependencies": {
-      "typescript": "npm:typescript@^1.8.10",
-      "chai": "npm:chai@^3.5.0",
-      "mocha": "npm:mocha@^2.5.3"
+      "typescript": "^1.8.10",
+      "chai": "^3.5.0",
+      "mocha": "^2.5.3"
     }
   }
 }
