Fix typings.json, turn off tsc d.ts gen
Wrap index.d.ts in module declaration for simple module discovery with
`import {} from 'servicestack-client';`

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "noImplicitAny": false,
     "noEmitOnError": true,
     "removeComments": false,
-    "declaration": true,
+    "declaration": false,
     "sourceMap": true,
     "target": "es5",
     "module": "commonjs",
