--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,7 @@
     "sourceMap": true,
     "target": "es5",
     "module": "commonjs",
-    "experimentalDecorators": true,
-    "outDir": "lib/"
+    "experimentalDecorators": true
   },
   "files": [
     "./typings/index.d.ts",
