Add typings json for registry
Remove manual fetch d.ts. Now will require TS users to include typings
to dt~isomorphic-fetch to work..
Hack can cause a lot of problems for users also including whatwg-fetch
or isomorphic-fetch to use another library.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "servicestack-client",
   "title": "ServiceStack JavaScript Utils",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "ServiceStack's TypeScript library providing a number of convenience utilities in developing web apps. Integrates with ServiceStack's Server features including Error Handling, Validation and Server Events",
   "homepage": "https://github.com/ServiceStack/servicestack-client",
   "bugs": "https://github.com/ServiceStack/Issues",
@@ -22,8 +22,7 @@
   "files": [
     "lib/index.d.ts",
     "lib/index.js",
-    "lib/index.js.map",
-    "lib/isomorphic-fetch.d.ts"
+    "lib/index.js.map"
   ],
   "keywords": [
     "servicestack",
