--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "noImplicitAny": false,
     "noEmitOnError": true,
     "removeComments": false,
-    "declaration": false,
+    "declaration": true,
     "sourceMap": true,
     "target": "es5",
     "module": "commonjs",
