--- a/package.json
+++ b/package.json
@@ -38,16 +38,13 @@
   "main": "src/index.js",
   "types": "src/index.d.ts",
   "dependencies": {
-    "@types/isomorphic-fetch": "^0.0.33",
     "es6-shim": "^0.35.3",
     "eventsource": "^0.2.2",
-    "isomorphic-fetch": "^2.2.1"
+    "fetch-everywhere": "^1.0.5"
   },
   "devDependencies": {
     "chai": "^3.5.0",
-    "eventsource": "^0.2.2",
     "mocha": "^2.5.3",
-    "typescript": "^2.0.10"
-  },
+    "typescript": "^2.2.1"
   }
 }
