Add support for managing cookies

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "./tests/dtos/techstacks.dtos.ts",
     "./tests/dtos/test.dtos.ts",
     "./tests/client.spec.ts",
-    "./tests/serverevents.spec.ts"
+    "./tests/serverevents.spec.ts",
+    "./tests/utils.spec.ts"
    ]
 }
