--- a/package.json
+++ b/package.json
@@ -43,8 +43,10 @@
     "fetch-everywhere": "^1.0.5"
   },
   "devDependencies": {
+    "@types/chai": "^3.5.2",
+    "@types/mocha": "^2.2.41",
     "chai": "^3.5.0",
     "mocha": "^2.5.3",
-    "typescript": "^2.2.1"
+    "typescript": "^2.3.2"
   }
 }
