--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/chai": "^3.5.2",
     "@types/mocha": "^2.2.41",
     "chai": "^3.5.0",
+    "fetch-everywhere": "^1.0.5",
     "mocha": "^2.5.3",
     "typescript": "^2.3.2"
   }
