--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "noEmitOnError": true,
     "removeComments": false,
     "declaration": true,
-    "sourceMap": true,
+    "sourceMap": false,
     "target": "es5",
     "module": "commonjs",
     "experimentalDecorators": true,
