--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "target": "es5",
     "module": "commonjs",
     "experimentalDecorators": true,
-    "lib": ["es2015","dom"]
+    "lib": ["es2015","dom","dom.iterable"]
   },
   "files": [
     "./src/index.ts",
