--- a/package.json
+++ b/package.json
@@ -39,16 +39,15 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "dependencies": {
-    "es6-shim": "^0.35.4",
-    "eventsource": "^1.0.7",
-    "fetch-everywhere": "^1.0.5"
+    "cross-fetch": "^3.1.0",
+    "es6-shim": "^0.35.6",
+    "eventsource": "^1.0.7"
   },
   "devDependencies": {
-    "@types/chai": "^4.1.7",
-    "@types/mocha": "^5.2.5",
-    "chai": "^4.2.0",
-    "fetch-everywhere": "^1.0.5",
-    "mocha": "^5.2.0",
-    "typescript": "^3.2.4"
+    "@types/chai": "^4.2.15",
+    "@types/mocha": "^8.2.1",
+    "chai": "^4.3.4",
+    "mocha": "^8.3.2",
+    "typescript": "^4.2.3"
   }
 }
