--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "scripts": {
     "pretest": "tsc",
+    "typecheck": "tsc --noEmit",
     "uglify": "uglifyjs dist\\servicestack-client.umd.js --compress --mangle -o dist\\servicestack-client.min.js",
     "publish": "tsc && tsc -p tsconfig.umd.json && move dist\\index.js dist\\servicestack-client.umd.js && bash inject-umd.sh && npm run uglify && move src\\index.js dist && copy src\\index.d.ts dist",
     "dtos": "cd tests/dtos && typescript-ref",
