--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "pretest": "tsc",
     "typecheck": "tsc --noEmit",
     "uglify": "uglifyjs dist\\servicestack-client.umd.js --compress --mangle -o dist\\servicestack-client.min.js",
-    "publish": "tsc && tsc -p tsconfig.umd.json && move dist\\index.js dist\\servicestack-client.umd.js && bash inject-umd.sh && npm run uglify && move src\\index.js dist && copy src\\index.d.ts dist",
+    "esm": "tsc -p tsconfig.esm.json && move dist\\index.js dist\\servicestack-client.esm.js && uglifyjs dist\\servicestack-client.esm.js --compress --mangle -o dist\\servicestack-client.esm.min.js",
+    "publish": "tsc && npm run esm && tsc -p tsconfig.umd.json && move dist\\index.js dist\\servicestack-client.umd.js && bash inject-umd.sh && npm run uglify && move src\\index.js dist && copy src\\index.d.ts dist",
     "dtos": "cd tests/dtos && typescript-ref",
     "test": "mocha -t 5000 ./tests/*.js",
     "testonly": "mocha -t 5000 ./tests/serverevents.spec.js",
@@ -50,6 +51,6 @@
     "@types/mocha": "^9.0.0",
     "chai": "^4.3.4",
     "mocha": "^9.1.3",
-    "typescript": "^4.6.4"
+    "typescript": "^4.9.4"
   }
 }
