--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "pretest": "tsc",
     "typecheck": "tsc --noEmit",
     "uglify": "uglifyjs dist\\servicestack-client.umd.js --compress --mangle -o dist\\servicestack-client.min.js",
-    "esm": "tsc -p tsconfig.esm.json && move dist\\index.js dist\\servicestack-client.esm.js && uglifyjs dist\\servicestack-client.esm.js --compress --mangle -o dist\\servicestack-client.esm.min.js",
-    "publish": "tsc && npm run esm && tsc -p tsconfig.umd.json && move dist\\index.js dist\\servicestack-client.umd.js && bash inject-umd.sh && npm run uglify && move src\\index.js dist && copy src\\index.d.ts dist",
+    "mjs": "tsc -p tsconfig.mjs.json && move dist\\index.js dist\\servicestack-client.mjs && uglifyjs dist\\servicestack-client.mjs --compress --mangle -o dist\\servicestack-client.min.mjs",
+    "publish": "tsc && npm run mjs && tsc -p tsconfig.umd.json && move dist\\index.js dist\\servicestack-client.umd.js && bash inject-umd.sh && npm run uglify && move src\\index.js dist && copy src\\index.d.ts dist",
     "dtos": "cd tests/dtos && typescript-ref",
     "test": "mocha -t 5000 ./tests/*.js",
     "testonly": "mocha -t 5000 ./tests/serverevents.spec.js",
@@ -29,8 +29,8 @@
     "dist/index.d.ts",
     "dist/servicestack-client.umd.js",
     "dist/servicestack-client.min.js",
-    "dist/servicestack-client.esm.js",
-    "dist/servicestack-client.esm.min.js"
+    "dist/servicestack-client.mjs",
+    "dist/servicestack-client.min.mjs"
   ],
   "keywords": [
     "servicestack",
