--- a/package.json
+++ b/package.json
@@ -43,15 +43,14 @@
   "licenses": [],
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "dependencies": {
-    "cross-fetch": "^3.1.4",
-    "es6-shim": "^0.35.6",
-    "eventsource": "^1.1.0"
+  "engines": {
+    "node": ">=18.0.0"
   },
   "devDependencies": {
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.0.0",
     "chai": "^4.3.4",
+    "eventsource": "^2.0.2",
     "mocha": "^9.1.3",
     "typescript": "^4.9.4"
   }
