--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   "devDependencies": {
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.0.0",
+    "@types/node": "^18.11.19",
     "chai": "^4.3.4",
     "eventsource": "^2.0.2",
     "mocha": "^9.1.3",
