--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "@types/node": "^18.11.19",
     "chai": "^4.3.4",
     "eventsource": "^2.0.2",
-    "mocha": "^9.1.3",
+    "mocha": "10.1.0",
     "shx": "^0.3.4",
     "typescript": "^4.9.4"
   }
