--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   "scripts": {
     "pretest": "tsc",
     "typecheck": "tsc --noEmit",
-    "uglify": "npx -y uglifyjs dist/servicestack-client.umd.js --compress --mangle -o dist/servicestack-client.min.js",
-    "uglify-mjs": "npx -y uglifyjs dist/servicestack-client.mjs --compress --mangle -o dist/servicestack-client.min.mjs",
+    "uglify": "npx -y uglify-js dist/servicestack-client.umd.js --compress --mangle -o dist/servicestack-client.min.js",
+    "uglify-mjs": "npx -y uglify-js dist/servicestack-client.mjs --compress --mangle -o dist/servicestack-client.min.mjs",
     "mjs": "tsc -p tsconfig.mjs.json && shx mv dist/index.js dist/servicestack-client.mjs && npm run uglify-mjs",
     "publish": "tsc && npm run mjs && tsc -p tsconfig.umd.json && shx mv dist/index.js dist/servicestack-client.umd.js && bash inject-umd.sh && npm run uglify && shx mv src/index.js dist && shx cp src/index.d.ts dist",
     "dtos": "cd tests/dtos && typescript-ref",
