Update published build artifacts to be correct so easier to validate what went to npm via `npm publish` command.

--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -39,9 +39,12 @@ jobs:
         with:
           name: servicestack-client
           path: |
+            ./dist/index.js
+            ./dist/index.d.ts
             ./dist/servicestack-client.mjs
+            ./dist/servicestack-client.min.js
             ./dist/servicestack-client.min.mjs
-            ./dist/servicestack-client.umd.cjs
+            ./dist/servicestack-client.umd.js
 
   publish:
     needs: package
