--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,9 +20,12 @@ jobs:
         with:
           name: servicestack-vue
           path: |
-            ./dist/servicestack-vue.mjs
-            ./dist/servicestack-vue.min.mjs
-            ./dist/servicestack-vue.umd.cjs
+            ./dist/index.js
+            ./dist/index.d.ts
+            ./dist/servicestack-client.mjs
+            ./dist/servicestack-client.min.js
+            ./dist/servicestack-client.min.mjs
+            ./dist/servicestack-client.umd.js
 
   publish-npm:
     needs: build
