--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Upload build artifact
         uses: actions/upload-artifact@v3
         with:
-          name: servicestack-vue
+          name: servicestack-client
           path: |
             ./dist/index.js
             ./dist/index.d.ts
