--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "uglify": "npx -y uglify-js dist/servicestack-client.umd.js --compress --mangle -o dist/servicestack-client.min.js",
     "uglify-mjs": "npx -y uglify-js dist/servicestack-client.mjs --compress --mangle -o dist/servicestack-client.min.mjs",
     "mjs": "tsc -p tsconfig.mjs.json && shx mv dist/index.js dist/servicestack-client.mjs && npm run uglify-mjs",
-    "publish": "tsc && npm run mjs && tsc -p tsconfig.umd.json && shx mv dist/index.js dist/servicestack-client.umd.js && bash inject-umd.sh && npm run uglify && shx mv src/index.js dist && shx cp src/index.d.ts dist",
     "dtos": "cd tests/dtos && typescript-ref",
     "test": "mocha",
     "test:browser": "mocha-headless-chrome -f http://localhost:8080/testrunner.html",
     "testonly": "mocha -t 5000 ./tests/serverevents.spec.js",
-    "release": "bump patch --commit --push --tag && npm publish"
+    "build": "tsc && npm run mjs && tsc -p tsconfig.umd.json && shx mv dist/index.js dist/servicestack-client.umd.js && bash inject-umd.sh && npm run uglify && shx mv src/index.js dist && shx cp src/index.d.ts dist",
+    "release": "npm run build && bump patch --commit --push --tag && npm publish"
   },
   "files": [
     "dist/index.js",
