--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -59,6 +59,6 @@ jobs:
           node-version: 22
           registry-url: https://npm.pkg.github.com/
       - run: npm ci
-      - run: npm release
+      - run: npm run release
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
