try running without a sandbox

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "mjs": "tsc -p tsconfig.mjs.json && shx mv dist/index.js dist/servicestack-client.mjs && npm run uglify-mjs",
     "dtos": "cd tests/dtos && typescript-ref",
     "test": "mocha",
-    "test:browser": "mocha-headless-chrome -f http://localhost:8080/testrunner.html",
+    "test:browser": "mocha-headless-chrome -f http://localhost:8080/testrunner.html -a no-sandbox -a disable-setuid-sandbox",
     "testonly": "mocha -t 5000 ./tests/serverevents.spec.js",
     "build": "tsc && npm run mjs && tsc -p tsconfig.umd.json && shx mv dist/index.js dist/servicestack-client.umd.js && bash inject-umd.sh && npm run uglify && shx mv src/index.js dist && shx cp src/index.d.ts dist",
     "release": "npm run build && bump patch --commit --push --tag && npm publish"
